# crust-sim

./: .gitignore  CLASH_ROYALE_ENGINE_ANALYSIS.md  CLASH_ROYALE_ENGINE_EXTRACTION_GUIDE.md  CLAUDE.md  Cargo.toml  DEFERRED_FEATURES.md  PHASE_4_SUBPHASES.md  README.md  ROADMAP.md  cr_client_test.py  cr_env.py  test_env.py
config/: README.md  patch_manifest.json
config/patches/v2020_06/: .gitkeep  arena.json  cards.json  mechanics.json
config/patches/v2025_current/: cards_complete.json
config/schemas/: arena.schema.json  card.schema.json  mechanics.schema.json
docs/: README.md
docs/legacy-analysis/: EXPLORATION_SUMMARY.txt  README.md
docs/phases/: PHASE_1_SUMMARY.md
engine/: Cargo.toml
engine/src/: action.rs  arena.rs  card.rs  lib.rs  rng.rs  state.rs  tower.rs
engine/src/entities/: mod.rs
engine/src/systems/: combat.rs  elixir.rs  lifecycle.rs  mod.rs  movement.rs  projectile.rs
scripts/: extract_arena.py  extract_cards.js  extract_cards.py  extract_mechanics.py  package.json  scrape_cards_fandom.py
shared/: Cargo.toml
shared/src/: cr_state.rs  lib.rs
