[workspace]
members = [
    "engine",
    "shared",
    "viewer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crust Sim Contributors"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Deterministic RNG
oorandom = "11.1"

# Utilities
thiserror = "1.0"
